force-app/main/default/objects/Squad_IQ_Field_Mapping__mdt/Squad_IQ_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Squad IQ Field Mapping</label>
    <pluralLabel>Squad IQ Field Mappings</pluralLabel>
</CustomObject>