force-app/main/default/objects/Squad_IQ_Field_Mapping__mdt/fields/In_Use__c.field-meta.xml
<CustomField>
    <fullName>In_Use__c</fullName>
    <defaultValue>true</defaultValue>
    <label>In Use?</label>
    <type>Checkbox</type>
</CustomField>