force-app/main/default/objects/Squad_IQ_Field_Mapping__mdt/fields/SquadIQ_Field_Param_Name__c.field-meta.xml
<CustomField>
    <fullName>SquadIQ_Field_Param_Name__c</fullName>
    <label>SquadIQ Field Param Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>